@@ -6,6 +6,7 @@
 * CardConnect: Add frontendid parameter to requests [gcatlin] #3198
 * Adyen: Correct formatting of Billing Address [nfarve] #3200
 * Stripe: Stripe: Show payment source [jknipp] #3202
+* Checkout V2: Checkout V2: Correct success criteria [curiousepic] #3205
 
 == Version 1.93.0 (April 18, 2019)
 * Stripe: Do not consider a refund unsuccessful if only refunding the fee failed [jasonwebster] #3188
